Move Twitch streaming into status controls
